add attributes filter